--- a/slcore/database/qemu.timer.yaml
+++ b/slcore/database/qemu.timer.yaml
@@ -65,7 +65,10 @@ jcore,pit: {extend: 'timer,generic'}
 lsi,zevio-timer: {extend: 'timer,generic'}
 marvell,armada-370-timer: {extend: 'timer,generic'}
 marvell,armada-375-timer: {extend: 'timer,generic'}
-marvell,armada-xp-timer: {extend: 'timer,generic'}
+marvell,armada-xp-timer:
+    extend: 'timer,generic'
+    n_irq: 2
+    counters: [{'addr': '0x14', 'id': 1}]
 marvell,orion-timer:
     extend: 'timer,generic'
     n_irq: 2
