--- a/examples/mips/ath79/profile.yaml
+++ b/examples/mips/ath79/profile.yaml
@@ -197,8 +197,7 @@ bamboo:
     mmio_size: '0x44'
     registers:
       stub_reserved9: {offset: 0x0 ... 0x40, value: '0x0'}
-basics: {architecture: mips, board: ath79, board_id: '0xFFFFFFFF', endian: b, machine_name: ath79,
-  uuid: ath79}
+basics: {architecture: mips, board: ath79, board_id: '0xFFFFFFFF', endian: b, machine_name: ath79}
 components: {output: '0x00000000    uImage header, header size: 64 bytes, created:
     2020-01-29 16:05:35, image size: 3571355 bytes, Data Address: 0x80060000, Entry
     Point: 0x80060000, OS: Linux, CPU: MIPS, compression type: lzma, image name: "MIPS
