--- a/examples/mips/ralink/profile.yaml
+++ b/examples/mips/ralink/profile.yaml
@@ -113,8 +113,7 @@ bamboo:
     mmio_size: '0x24'
     registers:
       stub_reserved9: {offset: 0x0 ... 0x20, value: '0x0'}
-basics: {architecture: mips, board_id: '0xFFFFFFFF', endian: l, machine_name: ramips_rt3883,
-  uuid: ramips_rt3883}
+basics: {architecture: mips, board_id: '0xFFFFFFFF', endian: l, machine_name: ramips_rt3883}
 kernel: {kernel_load_address: '0x80000000'}
 mapping:
   '0x80000000': {pa: '0x00000000', size: '0x20000000', va: '0x80000000'}
