--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -8,36 +8,37 @@ allwinner,sun9i-a80-nmi: {extend: 'intc,generic'}
 alphascale,asm9260-icoll: {extend: 'intc,generic'}
 arm,arm1176jzf-devchip-gic: {extend: 'intc,generic'}
 arm,arm11mp-gic:
-  n_irq: 64
   buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);',
     'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
       name }}), 0, {{ reg.base }} & 0xffff0000);']
-  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});']
+  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
+      }});']
   get_field: ['ARM11MPCorePriveState {{ name }};']
   get_header: [hw/cpu/arm11mpcore.h]
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
+  n_irq: 64
   parameters: [name, regs, intcp]
-  unique: True
+  unique: true
 arm,armv7m-nvic: {extend: 'intc,generic'}
 arm,cortex-a15-gic: {extend: 'intc,generic'}
 arm,cortex-a7-gic: {extend: 'intc,generic'}
 arm,cortex-a9-gic:
-  n_irq: 96
   buddy_compatible: ['arm,cortex-a9-scu', 'arm,cortex-a9-global-timer', 'arm,cortex-a9-twd-timer']
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_A9MPCORE_PRIV);',
-    'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-cpu", 2);',
-    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+    'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-cpu", 2);', 'object_property_set_bool(OBJECT(&s->{{
+      name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
       name }}), 0, {{ reg.base }} & 0xffff0000);']
-  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});']
+  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
+      }});']
   get_field: ['A9MPPrivState {{ name }};']
   get_header: [hw/cpu/a9mpcore.h]
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
+  n_irq: 96
   parameters: [name, regs, intcp]
-  unique: True
+  unique: true
 arm,eb11mp-gic: {extend: 'intc,generic'}
 arm,gic-400: {extend: 'intc,generic'}
-arm,cortex-a15-gic: {extend: 'intc,generic'}
 arm,gic-v3: {extend: 'intc,generic'}
 arm,pl190-vic: {extend: 'intc,generic'}
 arm,pl192-vic: {extend: 'intc,generic'}
@@ -85,65 +86,70 @@ ingenic,jz4770-intc: {extend: 'intc,generic'}
 ingenic,jz4775-intc: {extend: 'intc,generic'}
 ingenic,jz4780-intc: {extend: 'intc,generic'}
 intc,generic:
-  n_irq: 32
-  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_{{ name|upper
-      }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id
+      }}), TYPE_{{ name|upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{
+      id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->{{ name
+      }}{{ id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
       name }}{{ id }}), 0, {{ reg.base }});']
-  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn
+      }});']
   get_field: ['{{ name|upper }}State {{ name }}{{ id }};']
   get_header: ['hw/intc/{{ name }}.h']
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
+  n_irq: 32
   parameters: [name, regs, intcp]
 intel,i8259: {extend: 'intc,generic'}
 jcore,aic1: {extend: 'intc,generic'}
 jcore,aic2: {extend: 'intc,generic'}
 lsi,zevio-intc: {extend: 'intc,generic'}
 marvell,mpic:
-    extend: 'intc,generic'
-    n_irq: 96
-    external: true
-    get_registers:
-        - {ack: false, mask: true, mask_action: '(irqn)', mask_ack: true, mask_ack_action: '(irqn)', unmask: false, offset: '0x34', rname: r13}
-        - {ack: false, mask: true, mask_action: '(irqn)', mask_ack: true, mask_ack_action: '(irqn)', unmask: false, offset: '0x48', rname: r18}
-        - {ack: false, mask: false, mask_ack: false, unmask: true, unmask_action: '(irqn)', offset: '0x30', rname: r12}
-        - {ack: false, mask: false, mask_ack: false, unmask: true, unmask_action: '(irqn)', offset: '0x4C', rname: r19}
-        - {ack: false, mask: false, mask_ack: false, unmask: false, offset: '0x44', rname: r17}
-    irqn_to_regs:
-        - set_body: [s->r17 = 5;]
-          irqn: 5
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 6;]
-          irqn: 6
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 37;]
-          irqn: 37
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 38;]
-          irqn: 38
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 39;]
-          irqn: 39
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 40;]
-          irqn: 40
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 41;]
-          irqn: 41
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 42;]
-          irqn: 42
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 43;]
-          irqn: 43
-          clear_body: [s->r17 = 0xffffffff;]
-        - set_body: [s->r17 = 44;]
-          irqn: 44
-          clear_body: [s->r17 = 0xffffffff;]
+  extend: intc,generic
+  external: true
+  get_registers:
+  - {ack: false, mask: true, mask_ack: true, mask_ack_action: (irqn), mask_action: (irqn),
+    offset: '0x34', rname: r13, unmask: false}
+  - {ack: false, mask: true, mask_ack: true, mask_ack_action: (irqn), mask_action: (irqn),
+    offset: '0x48', rname: r18, unmask: false}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x30', rname: r12, unmask: true,
+    unmask_action: (irqn)}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x4C', rname: r19, unmask: true,
+    unmask_action: (irqn)}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x44', rname: r17, unmask: false}
+  irqn_to_regs:
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 5
+    set_body: [s->r17 = 5;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 6
+    set_body: [s->r17 = 6;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 37
+    set_body: [s->r17 = 37;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 38
+    set_body: [s->r17 = 38;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 39
+    set_body: [s->r17 = 39;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 40
+    set_body: [s->r17 = 40;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 41
+    set_body: [s->r17 = 41;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 42
+    set_body: [s->r17 = 42;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 43
+    set_body: [s->r17 = 43;]
+  - clear_body: [s->r17 = 0xffffffff;]
+    irqn: 44
+    set_body: [s->r17 = 44;]
+  n_irq: 96
 marvell,odmi-controller: {extend: 'intc,generic'}
 marvell,orion-bridge-intc:
   extend: intc,generic
-  n_irq: 32
   external: true
   get_registers:
   - {ack: true, ack_action: (~(1 << (irqn % 32))), mask: false, mask_ack: false, offset: '0x00',
@@ -161,9 +167,9 @@ marvell,orion-bridge-intc:
   - clear_body: [s->r0 &= ~0x00000008;]
     irqn: 3
     set_body: [s->r0 |= 0x00000008;]
+  n_irq: 32
 marvell,orion-intc:
   extend: intc,generic
-  n_irq: 32
   external: true
   get_registers:
   - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
@@ -180,6 +186,7 @@ marvell,orion-intc:
   - clear_body: [s->r0 &= ~0x00000010;]
     irqn: 4
     set_body: [s->r0 |= 0x00000010;]
+  n_irq: 32
 marvell,pxa-intc: {extend: 'intc,generic'}
 mediatek,mt6577-sysirq: {extend: 'intc,generic'}
 mediatek,mtk-cirq: {extend: 'intc,generic'}
