--- a/slcore/database/qemu.iv.yaml
+++ b/slcore/database/qemu.iv.yaml
@@ -2,6 +2,9 @@ plxtech,nas782x-plla:
       # [MMIO] base 0x44e001f0 size 0x00000010 of /plla@44e001f0/['plxtech,nas782x-plla']
     - {offset: 0x0, size: 0x4, value: 0x8000}
     - {offset: 0x4, size: 0x4, value: 0x8000}
+plxtech,nand-nas782x:
+      #  while (!(chip->read_byte(mtd) & NAND_STATUS_READY))
+    - {offset: 0x0, size: 0x4, value: 0x40, path: drivers/mtd/nand/nand_base.c, function: nand_command}
 mach-mvebu:
       # soc_dev_id = readl(pci_base + PCIE_DEV_ID_OFF) >> 16;
       # soc_rev = readl(pci_base + PCIE_DEV_REV_OFF) & SOC_REV_MASK;
