--- a/slcore/database/support.mips.yaml
+++ b/slcore/database/support.mips.yaml
@@ -39,8 +39,7 @@ ath25:
 ath79:
   device_tree: true
   profiles:
-      # examples/mips/ath79/profile.yaml: {brand: openwrt, revision: '15.05', version: 3.18.20}
-    examples/mips/ath79/profile.yaml: {brand: openwrt, revision: '19.07.1', version: 4.14.167}
+    examples/mips/ath79/profile.yaml: {brand: openwrt, revision: 19.07.1, version: 4.14.167}
   targets:
     openwrt: [ar71xx, ath79]
 bcm47xx:
@@ -109,12 +108,13 @@ pistachio:
 pmcs-msp71xx: {device_tree: false}
 pnx833x: {device_tree: false}
 ralink:
-  compatible: {'ralink,rt3352-soc': examples/mips/ralink/profile.yaml, 'ralink,rt3883-soc': examples/mips/ralink/profile.yaml}
+  compatible: {OMNI-EMB-HPM: examples/profiles/ralink_rt3883_soc/profile.yaml, 'ralink,rt3883-soc': examples/profiles/ralink_rt3883_soc/profile.yaml}
   device_tree: true
+ profiles:
+    examples/profiles/ralink_rt3883_soc/profile.yaml: {brand: openwrt, subtarget: rt3883,
+      target: ramips, version: null}
   targets:
     openwrt: [ramips]
-  profiles:
-    examples/mips/ralink/profile.yaml: {brand: openwrt, revision: '15.05', version: 3.18.20}
 rb532:
   device_tree: false
   targets:
