--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -221,9 +221,9 @@ qca,ar7240-misc-intc:
   extend: intc,generic
   external: true
   get_registers:
-  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
-  - {ack: false, mask: true, mask_ack: false, mask_action: (1 << irqn), offset: '0x04',
-    rname: r1, unmask: true, unmask_action: (1 << irqn)}
+  - {ack: true, ack_action: (old & (~(1 << (irqn)))), mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
+  - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << irqn))), offset: '0x04',
+    rname: r1, unmask: true, unmask_action: (old | ((1 << irqn)))}
   irqn_to_regs:
   - clear_body: [s->r0 &= ~(1 << 2);]
     irqn: 2
@@ -234,6 +234,7 @@ qca,ar7240-misc-intc:
   - clear_body: [s->r0 &= ~(1 << 4);]
     irqn: 4
     set_body: [s->r0 |= (1 << 4);]
+  fix_size: '0x8'
 qca,ar9340-intc: {extend: 'intc,generic'}
 qcom,msm-8660-qgic: {extend: 'intc,generic'}
 qcom,msm-qgic2: {extend: 'intc,generic'}
