--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -107,14 +107,15 @@ marvell,mpic:
   external: true
   get_registers:
   - {ack: false, mask: true, mask_ack: true, mask_ack_action: (irqn), mask_action: (irqn),
-    offset: '0x34', rname: r13, unmask: false, override: True}
+    offset: '0x34', rname: r13, unmask: false, override: True, value: 0}
   - {ack: false, mask: true, mask_ack: true, mask_ack_action: (irqn), mask_action: (irqn),
-    offset: '0x48', rname: r18, unmask: false, override: True}
+    offset: '0x48', rname: r18, unmask: false, override: True, value: 0}
   - {ack: false, mask: false, mask_ack: false, offset: '0x30', rname: r12, unmask: true,
-    unmask_action: (irqn), override: True}
+    unmask_action: (irqn), override: True, value: 0}
   - {ack: false, mask: false, mask_ack: false, offset: '0x4C', rname: r19, unmask: true,
-    unmask_action: (irqn), override: True}
-  - {ack: false, mask: false, mask_ack: false, offset: '0x44', rname: r17, unmask: false}
+    unmask_action: (irqn), override: True, value: 0}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x44', rname: r17, unmask: false, override: False, value: 0}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x0', rname: r0, unmask: false, override: False, value: 96 << 2}
   irqn_to_regs:
   - clear_body: [s->r17 = 0xffffffff;]
     irqn: 5
@@ -153,10 +154,10 @@ marvell,orion-bridge-intc:
   external: true
   get_registers:
   - {ack: true, ack_action: (~(1 << (irqn % 32))), mask: false, mask_ack: false, offset: '0x00',
-    rname: r0, unmask: false, override: False}
+    rname: r0, unmask: false, override: False, value: 0}
   - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << (irqn %
       32)))), offset: '0x04', rname: r1, unmask: true, unmask_action: (old | (1 <<
-          (irqn % 32))), override: True}
+          (irqn % 32))), override: True, value: 0}
   irqn_to_regs:
   - clear_body: [s->r0 &= ~0x00000002;]
     irqn: 1
@@ -172,10 +173,10 @@ marvell,orion-intc:
   extend: intc,generic
   external: true
   get_registers:
-  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false, override: True}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false, override: True, value: 0}
   - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << (irqn %
       32)))), offset: '0x04', rname: r1, unmask: true, unmask_action: (old | ((1 <<
-      (irqn % 32)))), override: True}
+      (irqn % 32)))), override: True, value: 0}
   irqn_to_regs:
   - clear_body: [s->r0 &= ~0x00000001;]
     irqn: 0
@@ -224,9 +225,9 @@ qca,ar7240-misc-intc:
   extend: intc,generic
   external: true
   get_registers:
-  - {ack: true, ack_action: (old & (~(1 << (irqn)))), mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false, override: True}
+  - {ack: true, ack_action: (old & (~(1 << (irqn)))), mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false, override: True, value: 0}
   - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << irqn))), offset: '0x04',
-    rname: r1, unmask: true, unmask_action: (old | ((1 << irqn))), override: True}
+    rname: r1, unmask: true, unmask_action: (old | ((1 << irqn))), override: True, value: 0}
   irqn_to_regs:
   - clear_body: [s->r0 &= ~(1 << 2);]
     irqn: 2
