move tools to anlysis

--- a/slcore/cmdconfigs/plugins/image.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/image.cmd.yaml
@@ -1,9 +1,10 @@
 unpack:
     help: "Plugin - Unpack an image."
-    optional:
+    optional: &optional
         firmware: {short: f, metavar: "IMAGE",
             help: "We extend Binwalk to identify more image headers and can extract the Linux kernel in the image."}
-    callback: __unpack
-prbtcmd:
+    callback: __pluginunpacking
+pbtngcmd:
     help: "Plugin - Print booting cmdline for given image."
-    callback: __prbtcmd
+    optional: *optional
+    callback: __pluginpbtngcmd
