--- a/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
@@ -1,12 +1,8 @@
-of_init:
-    help: "Plugin - Find of_init callbacks w.s.t compatibles in given device tree."
-    optional: &optional
-        dtb: {short: dtb, required: False}
-    callback: __scan_dtcb
 topology:
     help: "Plugin - Find the interrupt topology in given device tree."
-    optional: *optional
-    callback: __scan_topology
+    optional: &optional
+        dtb: {short: dtb, required: False}
+    callback: __plugintopologydt
 disclose:
     help: "Plugin - Disclose device tree blob."
     optional:
@@ -15,4 +11,4 @@ disclose:
             help: "Show MMIO regions in the device tree blob."}
         flash: {short: f, required: False, action: "store_true", default: True,
             help: "Show FLASH chips in the device tree blob."}
-    callback: __dtinfo
+    callback: __plugindisclosedt
