--- a/slcore/cmdconfigs/plugins/image.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/image.cmd.yaml
@@ -3,8 +3,8 @@ unpack:
     optional: &optional
         firmware: {short: f, metavar: "IMAGE",
             help: "We extend Binwalk to identify more image headers and can extract the Linux kernel in the image."}
-    callback: __pluginunpacking
+    callback: __unpacking
 pbtngcmd:
     help: "Plugin - Print booting cmdline for given image."
     optional: *optional
-    callback: __pluginpbtngcmd
+    callback: __pbtngcmd
