--- a/slcore/cmdconfigs/global.cmd.yaml
+++ b/slcore/cmdconfigs/global.cmd.yaml
@@ -1,4 +1,8 @@
 global:
     optional:
-        reset: {short: r, action: "store_true", default: False, help: "reset all analyses"}
-        debug: {short: d, action: "store_true", help: "show verbose logs"}
+        reset: {short: r, action: "store_true", default: False,
+            help: "reset all analyses"}
+        debug: {short: d, action: "store_true",
+            help: "show verbose logs"}
+        archive: {short: x, action: "store_true", default: False,
+            help: "archive profiles and QEMU machines"}
