--- a/slcore/cmdconfigs/plugins/image.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/image.cmd.yaml
@@ -6,5 +6,8 @@ unpack:
     callback: unpacking
 printcmd:
     help: "Plugin - Print booting cmdline for given image."
-    optional: *optional
+    optional:
+        << : *optional
+        dtb: {short: dtb, required: False, help: "If the image you provide has no device tree blob,
+                you can provide a device tree blob, otherwise, ignored."}
     callback: printcmd
